--- a/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
+++ b/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
@@ -1,7 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.spellchecker.controller.SpellCheckerController">
-	<!-- TODO Add Nodes -->
+
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="it.polito.tdp.spellchecker.controller.SpellCheckerController">
+   <top>
+      <Label text="Lab3_SpellChecker" BorderPane.alignment="CENTER" />
+   </top>
+   <center>
+      <AnchorPane prefHeight="376.0" prefWidth="442.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField fx:id="time" layoutX="16.0" layoutY="503.0" prefHeight="26.0" prefWidth="470.0" />
+            <Label layoutX="16.0" layoutY="6.0" text="Choose the language:" />
+            <ChoiceBox fx:id="chooselng" layoutX="142.0" layoutY="2.0" prefWidth="150.0" />
+            <TextArea fx:id="input" layoutX="16.0" layoutY="35.0" prefHeight="185.0" prefWidth="551.0" />
+            <Button fx:id="spellCheck" layoutX="486.0" layoutY="228.0" mnemonicParsing="false" onAction="#doSpellCheck" text="Spell Check" />
+            <TextArea fx:id="output" layoutX="16.0" layoutY="286.0" prefHeight="170.0" prefWidth="551.0" />
+            <Button fx:id="clearText" layoutX="490.0" layoutY="463.0" mnemonicParsing="false" onAction="#doClearText" text="Clear Text" />
+            <TextField fx:id="recap" layoutX="282.0" layoutY="463.0" prefHeight="26.0" prefWidth="204.0" />
+            <Label layoutX="16.0" layoutY="260.0" text="Wrong Words:" />
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
